@@ -118,6 +118,7 @@ typedef void *yyscan_t;
 #define OPCODE_INCP_ELEMENT   65
 #define OPCODE_DECP_ELEMENT   66
 #define OPCODE_ABORT          67
+#define OPCODE_CATCH          68
 
 class NXSL_Compiler;
 
