@@ -38,6 +38,7 @@ static void LexerError(const char *pszMsg, yyscan_t scanner);
 <INITIAL>"array"    return T_ARRAY;
 <INITIAL>"break"    return T_BREAK;
 <INITIAL>"case"     return T_CASE;
+<INITIAL>"catch"    return T_CATCH;
 <INITIAL>"const"    return T_CONST;
 <INITIAL>"continue" return T_CONTINUE;
 <INITIAL>"default"  return T_DEFAULT;
@@ -67,6 +68,7 @@ static void LexerError(const char *pszMsg, yyscan_t scanner);
 <INITIAL>"switch"   return T_SWITCH;
 <INITIAL>"TRUE"     return T_TRUE;
 <INITIAL>"true"     return T_TRUE;
+<INITIAL>"try"      return T_TRY;
 <INITIAL>"uint32"   return T_TYPE_UINT32;
 <INITIAL>"uint64"   return T_TYPE_UINT64;
 <INITIAL>"use"      return T_USE;
